# instagrap

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ClassificationCriteria.tsx  LoadingScreen.tsx  LoginCard.tsx  TodoList.tsx  index.ts
src/constants/: index.ts
src/hooks/: useAppState.ts
src/types/: index.ts
src/utils/: api.ts  download.ts  styles.ts
