[package]
name = "instagrap"
version = "0.1.0"
description = "Instagram Graph App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "instagrap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
dirs = "5"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

playwright = "0.0.20"
tiny_http = "0.12"
google-cloud-storage = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
